# Brain-CEL

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
examples/ftcompare/: CMakeLists.txt  buildparams.json  main.cpp  visualize.py
examples/nestcompare/: CMakeLists.txt  buildparams.json  main.cpp  nest_bench.py  simparams.json  visualize.py
examples/quickstart/: CMakeLists.txt  main.cpp  visualize.py
examples/timingwindow/: CMakeLists.txt  buildparams.json  main.cpp  simparams.json  visualize.py
include/braincel/: Log.h  Metrics.h  PotentialWorker.h  SimulationLogger.h  SimulationWorker.h  Simulator.h  StdpWorker.h  build.h  config.h  uuid.h
src/: CMakeLists.txt  SimulationLogger.cpp  SimulationWorker.cpp  Simulator.cpp
src/core/: Callback.cpp  Callback.h  Connection.h  Container.h  Distribution.h  Host.cpp  Host.h  Input.h  Log.cpp  Metrics.cpp  Module.h  Output.h  Partition.h  Process.h  Rule.h  Schema.h  State.h  Storage.h  Timed.cpp  Timed.h  View.h  convert.h
src/core/meta/: con_expander.h  con_maker.h  con_process.h  rule_expander.h  type_list.h  type_pack.h
src/functional/: Function.h  Variable.h
src/spiking/: Axon.h  Dendrite.h  Layer.h  Membrane.cpp  Membrane.h  Network.cpp  Network.h  Neuron.h  Plasticity.h  Soma.h  Synapse.h  generate.h
src/spiking/cuda/: NeuronGroup.cu  NeuronGroup.cuh
